# manual_h2_client

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  manual_h2_client.spec
lint/: CMakeLists.txt
mh2c/: CMakeLists.txt  http2_client.cpp  http2_client.cpp-e  http2_client.h  http2_client.ipp  mh2c.h
mh2c/common/: byte_array.h  byte_array.h-e
mh2c/frame/: common_type.h  common_type.h-e  continuation_frame.cpp  continuation_frame.h  data_frame.cpp  data_frame.cpp-e  data_frame.h  data_frame.h-e  error_codes.h  error_codes.h-e  error_codes.ipp  frame_builder.cpp  frame_builder.h  frame_builder.h-e  frame_header.cpp  frame_header.cpp-e  frame_header.h  frame_header.h-e  frame_header.ipp  frame_header.ipp-e  frame_type_registry.h  frame_type_registry.h-e  frame_type_registry.ipp  goaway_frame.cpp  goaway_frame.cpp-e  goaway_frame.h  headers_frame.cpp  headers_frame.h  i_frame.h  i_frame.h-e  ping_frame.cpp  ping_frame.cpp-e  ping_frame.h  ping_frame.h-e  priority_frame.cpp  priority_frame.cpp-e  priority_frame.h  priority_frame.h-e  push_promise_frame.cpp  push_promise_frame.h  (+13 more)
mh2c/hpack/: dynamic_table.cpp  dynamic_table.cpp-e  dynamic_table.h  dynamic_table.h-e  header_decoder.cpp  header_decoder.h  header_decoder.h-e  header_encoder.cpp  header_encoder.h  header_type.cpp  header_type.h  header_type.h-e  huffman_code.cpp  huffman_code.cpp-e  huffman_code.h  huffman_code.h-e  huffman_decoder.cpp  huffman_decoder.h  huffman_decoder.h-e  huffman_encoder.cpp  huffman_encoder.cpp-e  huffman_encoder.h  huffman_encoder.h-e  integer_representation.h  integer_representation.h-e  integer_representation.ipp  integer_representation.ipp-e  static_table_definition.cpp  static_table_definition.cpp-e  static_table_definition.h
mh2c/ssl/: ssl_bio.cpp  ssl_bio.cpp-e  ssl_bio.h  ssl_bio.h-e  ssl_connection.cpp  ssl_connection.cpp-e  ssl_connection.h  ssl_ctx.cpp  ssl_ctx.cpp-e  ssl_ctx.h  ssl_verify_mode.h  ssl_verify_mode.h-e
mh2c/util/: bit_operation.h  bit_operation.h-e  bit_operation.ipp  bit_operation.ipp-e  byte_order.cpp  byte_order.h  byte_order.ipp  byte_order.ipp-e  cast.h  cast.ipp  cast.ipp-e
sample/h2_get/: CMakeLists.txt  sample_h2_get.cpp
test/: CMakeLists.txt
test/frame/: continuation_frame_test.cpp  data_frame_test.cpp  data_frame_test.cpp-e  frame_builder_test.cpp  frame_header_test.cpp  frame_header_test.cpp-e  goaway_frame_test.cpp  goaway_frame_test.cpp-e  headers_frame_test.cpp  ping_frame_test.cpp  priority_frame_test.cpp  push_promise_frame_test.cpp  push_promise_frame_test.cpp-e  rst_stream_frame_test.cpp  rst_stream_frame_test.cpp-e  settings_frame_test.cpp  window_update_frame_test.cpp
test/hpack/: dynamic_table_test.cpp  dynamic_table_test.cpp-e  header_decoder_test.cpp  header_decoder_test.cpp-e  header_encoder_test.cpp  header_encoder_test.cpp-e  huffman_decoder_test.cpp  huffman_decoder_test.cpp-e  huffman_encoder_test.cpp  integer_representation_test.cpp  integer_representation_test.cpp-e  static_table_definition_test.cpp
test/util/: bit_operation_test.cpp  byte_order_test.cpp  byte_order_test.cpp-e
